test/sema/positive/typevar_instantiation2.impala
fn myf[A](x: A, f: fn[B](B)->B) -> A {
    f[A](x)
}
