test/sema/negative/wrong_return2.impala
fn f[A, B](x:A) -> B {
   x
}